src/snapshots/bl__tests__snapshots__cmd_record__group__start.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Start a named group in the recording

Usage: bl record group start [OPTIONS] <name>

Arguments:
  <name>  Name for the group

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl record group start "Login"
  # Groups nest actions in the trace viewer
