src/snapshots/bl__tests__snapshots__cmd_record__group__stop.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
End the current recording group

Usage: bl record group stop [OPTIONS]

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl record group stop
